[gd_scene load_steps=9 format=3 uid="uid://bucbr4gw228qx"]

[ext_resource type="Script" path="res://scripts/objects/lifting_door.gd" id="1_yj8xh"]
[ext_resource type="AudioStream" uid="uid://d2jn02mdun34r" path="res://audio/sfx/misc/lifting_door_open.mp3" id="2_u52y4"]
[ext_resource type="AudioStream" uid="uid://clpvmdmv3wm7a" path="res://audio/sfx/misc/lifting_door_close.mp3" id="3_innbu"]

[sub_resource type="BoxMesh" id="BoxMesh_5infk"]
size = Vector3(4, 6, 0.5)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_sf783"]
data = PackedVector3Array(-2, 3, 0.25, 2, 3, 0.25, -2, -3, 0.25, 2, 3, 0.25, 2, -3, 0.25, -2, -3, 0.25, 2, 3, -0.25, -2, 3, -0.25, 2, -3, -0.25, -2, 3, -0.25, -2, -3, -0.25, 2, -3, -0.25, 2, 3, 0.25, 2, 3, -0.25, 2, -3, 0.25, 2, 3, -0.25, 2, -3, -0.25, 2, -3, 0.25, -2, 3, -0.25, -2, 3, 0.25, -2, -3, -0.25, -2, 3, 0.25, -2, -3, 0.25, -2, -3, -0.25, 2, 3, 0.25, -2, 3, 0.25, 2, 3, -0.25, -2, 3, 0.25, -2, 3, -0.25, 2, 3, -0.25, -2, -3, 0.25, 2, -3, 0.25, -2, -3, -0.25, 2, -3, 0.25, 2, -3, -0.25, -2, -3, -0.25)

[sub_resource type="BoxShape3D" id="BoxShape3D_tngqq"]
size = Vector3(4, 6, 1)

[sub_resource type="Animation" id="Animation_ser87"]
resource_name = "open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mesh:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 3, 0), Vector3(0, 8.5, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hx8q7"]
_data = {
"open": SubResource("Animation_ser87")
}

[node name="LiftingDoor" type="Node3D"]
script = ExtResource("1_yj8xh")

[node name="Mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
mesh = SubResource("BoxMesh_5infk")

[node name="StaticBody3D" type="StaticBody3D" parent="Mesh"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Mesh/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_sf783")

[node name="Area" type="Area3D" parent="."]

[node name="CollisionBox" type="CollisionShape3D" parent="Area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
shape = SubResource("BoxShape3D_tngqq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hx8q7")
}

[node name="CloseTimer" type="Timer" parent="."]
one_shot = true

[node name="SFX" type="Node3D" parent="."]

[node name="Open" type="AudioStreamPlayer3D" parent="SFX"]
stream = ExtResource("2_u52y4")
max_distance = 10.0
bus = &"SFX"

[node name="Close" type="AudioStreamPlayer3D" parent="SFX"]
stream = ExtResource("3_innbu")
max_distance = 10.0
bus = &"SFX"

[connection signal="body_entered" from="Area" to="." method="_on_area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_area_body_exited"]
[connection signal="timeout" from="CloseTimer" to="." method="_on_close_timer_timeout"]
